--- a/pages/login.html
+++ b/pages/login.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Data WareHouse</title>
+
+    <title>Login</title>
 </head>
+
 <header>
     <ul class="nav justify-content-end p-3 mb-2 bg-danger text-dark">
         <li class="nav-item">
@@ -24,6 +26,25 @@
       </ul>
 </header>
 <body>
+    <h2>
+        Bievenido
+    </h2>
+    <div class="card" style="width: 35rem;">
+        <form>
+            <div class="mb-3">
+                <label for="formGroupExampleInput" class="form-label">Usuario</label>
+                <input type="text" class="form-control" id="userLogin" placeholder="ingrese su email">
+              </div>
+              <div class="mb-3">
+                <label for="formGroupExampleInput2" class="form-label">Contraseña</label>
+                <input type="text" class="form-control" id="userPass" placeholder="Contrseña">
+              </div>
     
+            <button type="submit" class="btn btn-primary" id="btnLogin">Ingresar</button>
+          </form>
+
+    </div>
+    <script type="module" src="../scripts/login.js"></script>
+    <!-- <script type="module" src="../services/services.js" ></script> -->
 </body>
 </html>
