--- a/pages/user.html
+++ b/pages/user.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Data WareHouse</title>
+
+    <title>User</title>
 </head>
+
 <header>
     <ul class="nav justify-content-end p-3 mb-2 bg-danger text-dark">
         <li class="nav-item">
@@ -24,6 +26,9 @@
       </ul>
 </header>
 <body>
+    <h2>
+        Usuarios
+    </h2>
     
 </body>
 </html>
