--- a/pages/user.html
+++ b/pages/user.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
     <title>User</title>
 </head>
 
@@ -29,6 +29,40 @@
     <h2>
         Usuarios
     </h2>
-    
-</body>
-</html>
+    <!--Inicio formulario de creacion de usuarios-->
+    <div class="col g-4" id="formUser" >
+      <div class="col-md-4">
+        <label for="name" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="name" placeholder="Nombre de usuario" required>
+      </div>
+      <div class="col-md-4">
+        <label for="lastName" class="form-label">Apellido</label>
+        <input type="text" class="form-control" id="lastName" placeholder="Apellido de usuario" required>
+      </div>
+      <div class="col-md-4">
+        <label for="emailInput" class="form-label">Email</label>
+        <input type="email" class="form-control" id="emailInput" placeholder="nombre@example.com"> 
+      </div>
+      <div class="col-md-4">
+        <label for="profile" class="form-label">Perfil</label>
+        <input type="text" class="form-control" id="profile" placeholder="A = Admin; U = Usuario" required>
+      </div>
+      <div class="col-md-4">
+        <label for="inputPassword" class="form-label">Password</label>
+        <input type="password" class="form-control" id="inputPassword">
+      </div>
+      <div class="col-md-4">
+        <label for="inputPassword2" class="form-label">Repetir Password</label>
+        <input type="password" class="form-control" id="inputPassword2">
+      </div>
+      <div class="col-md-4"></div>
+      <div class="col-md-4"></div>
+     
+      <div class="col-12">
+      <button type="submit" class="btn btn-primary" id="createUserbtn" >Crear</button>
+      </div>
+    </div>
+      <!--Fin formulario de creacion de usuarios-->
+      <script type="module" src="../scripts/userdashboard.js"></script>    
+    </body>
+    </html>
