--- a/pages/login.html
+++ b/pages/login.html
@@ -15,13 +15,13 @@
           <a class="nav-link active" aria-current="page" href="#">Contactos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./login.html">Usuarios</a>
+          <a class="nav-link active" aria-current="page" href="./pages/login.html">Usuarios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Compañías</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Región / Ciuadad</a>
+          <a class="nav-link active" aria-current="page" href="./regions.html">Región / Ciuadad</a>
         </li>
       </ul>
 </header>
