--- a/pages/user.html
+++ b/pages/user.html
@@ -27,7 +27,7 @@
 </header>
 <body>
     <h2>
-        Usuarios
+        Crear Usuario
     </h2>
     <!--Inicio formulario de creacion de usuarios-->
     <div class="col g-4" id="formUser" >
