--- a/pages/userslist.html
+++ b/pages/userslist.html
@@ -15,17 +15,16 @@
         <a class="nav-link active" aria-current="page" href="#">Contactos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="./pages/login.html">Usuarios</a>
+        <a class="nav-link active" aria-current="page" href="./userslist.html">Usuarios</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Compañías</a>
+        <a class="nav-link active" aria-current="page" href="./companieslist.html">Compañías</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="./regions.html">Región / Ciuadad</a>
       </li>
     </ul>
 </header>
-<body>
   <h2>
     Lista de Usuarios
 </h2>
@@ -109,8 +108,14 @@
             <label for="inputPassword2" class="form-label">Repetir Password</label>
             <input type="password" class="form-control" id="inputPassword2">
           </div>
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
+          <div class="col-md-4">
+          </div>
+          </div>
+          <div class="col-md-4">
+          </div>
+          <div class="col-md-4 error" id="errorPass" >
+
+          </div>
         
           <div class="col-12" id="btnContainer">
             <button type="submit" class="btn btn-primary" id="cancelUserbtn" >Cancelar</button>
