--- a/pages/regions.html
+++ b/pages/regions.html
@@ -21,24 +21,20 @@
 
   <header>
     <ul class="nav justify-content-end p-3 mb-2 bg-danger text-dark">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Contactos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="./pages/login.html"
-          >Usuarios</a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Compañías</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="./regions.html"
-          >Región / Ciuadad</a
-        >
-      </li>
-    </ul>
-  </header>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Contactos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./userslist.html">Usuarios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./companieslist.html">Compañías</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./regions.html">Región / Ciuadad</a>
+        </li>
+      </ul>
+</header>
 
   <body>
     <div id="regionTitle" class="regionTitle">
