maqueta contacto. cia ok

--- a/pages/regions.html
+++ b/pages/regions.html
@@ -22,7 +22,7 @@
   <header>
     <ul class="nav justify-content-end p-3 mb-2 bg-danger text-dark">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Contactos</a>
+          <a class="nav-link active" aria-current="page" href="./contacts.html">Contactos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="./userslist.html">Usuarios</a>
