Mejoras en la ruta de Usuario

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -53,21 +53,29 @@
                   <th scope="col">País/Región</th>
                   <th scope="col">Compañía</th>
                   <th scope="col">Cargo</th>
-                  <th scope="col">Canal Preferido</th>
                   <th scope="col">Interes</th>
                   <th scope="col">Actualizar</th>
                   <th scope="col">Borrar</th>
                   
                 </tr>
               </thead>
-              <tbody id="testCompany">
+              <tbody id="contactTable">
                 <tr>
-                  <td>box</td>
-                  <td>Juan Carlos</td>
-                  <td>Argentina</td>
+                  <td></td>
+                  <td>Juan Carlos Garcia <div class="insideText" >nombre@email.com</div></td>
+                  <td>Argentina <div class="insideText" >Sudamerica</div></td>
                   <td>El Sitio</td>
                   <td>Webmaster</td>
-                  <td>Whatsapp</td>
+                  <td>100%</td>
+                  <td><button class="btn btn-primary me-md-2" type="button">Actualizar</button> </td>
+                  <td><button class="btn btn-primary me-md-2" type="button">Borrar</button></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td>Juan Carlos Garcia <div class="insideText" >nombre@email.com</div></td>
+                  <td>Argentina <div class="insideText" >Sudamerica</div></td>
+                  <td>El Sitio</td>
+                  <td>Webmaster</td>
                   <td>100%</td>
                   <td><button class="btn btn-primary me-md-2" type="button">Actualizar</button> </td>
                   <td><button class="btn btn-primary me-md-2" type="button">Borrar</button></td>
