--- a/pages/company.html
+++ b/pages/company.html
@@ -53,9 +53,9 @@
           <div class="col-md-4">
             <label for="citySelect" class="form-label">Ciudad</label>
             <select class="form-select form-select-m mb-3" aria-label=".form-select-sm example"  id="citySelect">
-              <option selected>Selecionar un país primero</option>
+              <option >Selecionar un país primero</option>
               <option value="1">Ciudad 1</option>
-              <option value="2">Ciudad 2</option>
+              <option selected="true" value="2">Ciudad 2</option>
               
             </select>
           </div>
