--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -59,17 +59,6 @@
         <p class="checkAction" id="checkSelected">"#" Seleccionados</p>
         <p class="checkAction" id="trashContainer"><i class="fa-solid fa-trash-can"></i> Eliminar Contactos</p>
       </div>
-
-  <!-- prueba dropdown -->
-  <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-    <option selected>Interes</option>
-    <option value="0">0</option>
-    <option value="25">25</option>
-    <option value="50">50</option>
-    <option value="100">100</option>
-  </select>
-  
-
       
           <div>
             <table class="table">
@@ -115,7 +104,7 @@
           <script type="module" src="../scripts/contactslist.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>   
           
 
 </body>
