--- a/pages/companieslist.html
+++ b/pages/companieslist.html
@@ -15,7 +15,7 @@
         <a class="nav-link active" aria-current="page" href="./contacts.html">Contactos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="./userslist.html">Usuarios</a>
+        <a class="nav-link active" aria-current="page" id="userDiv" href="./userslist.html">Usuarios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="./companieslist.html">Compañías</a>
@@ -129,7 +129,7 @@
         
           <div class="col-12" id="btnContainer">
             <button type="submit" class="btn btn-primary" id="cancelCiarbtn" >Cancelar</button>
-          <button type="submit" class="btn btn-primary" id="updateCiabtn" >OK</button>
+          <button type="submit" class="btn btn-primary" id="updateCiabtn" >Actualizar</button>
           </div>
       </form>    
     </div>
@@ -140,7 +140,7 @@
     <!-- Fin Form de Actualización de Compania-->
 
 
-    <script type="module" src="../scripts/companieslist.js"></script>
+    <script type="module" src="../frontend/companieslist.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>    
 </body>
 </html>
