--- a/pages/regions.html
+++ b/pages/regions.html
@@ -25,7 +25,7 @@
           <a class="nav-link active" aria-current="page" href="./contacts.html">Contactos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./userslist.html">Usuarios</a>
+          <a class="nav-link active" aria-current="page" id="userDiv" href="./userslist.html">Usuarios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="./companieslist.html">Compañías</a>
@@ -84,6 +84,6 @@
   <!-- 5 include the minified jstree source -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
     <!-- script del frontend-->
-    <script type="module" src="../scripts/regionFront.js"></script>
+    <script type="module" src="../frontend/regionFront.js"></script>
   </body>
 </html>
