--- a/pages/user.html
+++ b/pages/user.html
@@ -15,7 +15,7 @@
         <a class="nav-link active" aria-current="page" href="./contacts.html">Contactos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="./userslist.html">Usuarios</a>
+        <a class="nav-link active" aria-current="page" id="userDiv" href="./userslist.html">Usuarios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="./companieslist.html">Compañías</a>
@@ -68,6 +68,6 @@
       </div>
     </div>
       <!--Fin formulario de creacion de usuarios-->
-      <script type="module" src="../scripts/userdashboard.js"></script>    
+      <script type="module" src="../frontend/userdashboard.js"></script>    
     </body>
     </html>
