--- a/pages/userslist.html
+++ b/pages/userslist.html
@@ -15,7 +15,7 @@
         <a class="nav-link active" aria-current="page" href="./contacts.html">Contactos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="./userslist.html">Usuarios</a>
+        <a class="nav-link active" aria-current="page" id="userDiv" href="./userslist.html">Usuarios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="./companieslist.html">Compañías</a>
@@ -61,7 +61,7 @@
           </tr>
         </thead>
         <tbody id="testMark">
-          <tr>
+         <!--  <tr>
             <th scope="row">1</th>
             <td>0</td>
             <td>Mark</td>
@@ -70,7 +70,7 @@
             <td>A</td>
             <td><button class="btn btn-primary me-md-2" type="button">Actualizar</button> </td>
             <td><button class="btn btn-primary me-md-2" type="button">Borrar</button></td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>  
     </div>
@@ -130,6 +130,6 @@
     <!-- Fin Form de Actualización de usuario-->
 
 
-    <script type="module" src="../scripts/userslist.js"></script>    
+    <script type="module" src="../frontend/userslist.js"></script>    
 </body>
 </html>
