--- a/pages/company.html
+++ b/pages/company.html
@@ -15,7 +15,7 @@
         <a class="nav-link active" aria-current="page" href="./contacts.html">Contactos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="./userslist.html">Usuarios</a>
+        <a class="nav-link active" aria-current="page" id="userDiv" href="./userslist.html">Usuarios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="./companieslist.html">Compañías</a>
@@ -86,6 +86,6 @@
     <!-- Fin Form  de Compania-->
 
 
-    <script type="module" src="../scripts/companydashboard.js"></script>    
+    <script type="module" src="../frontend/companydashboard.js"></script>    
 </body>
 </html>
